# Parcel-locker-kiosk

./: CMakeLists.txt  README.md  resources.qrc
cpp/: backend.cpp  backend.h  doorcontroller.cpp  doorcontroller.h  main.cpp
data/: mock_api.json
qml/: CodeEntryScreen.qml  DoorControlScreen.qml  Main.qml  ResultScreen.qml  ValidatingScreen.qml  WelcomeScreen.qml
tests/: CMakeLists.txt  tst_doorcontroller.cpp
